--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ a{
 .presentation article .image{
     width: 400px;
     height: 380px;
-    background: url('../images/image_ (1).jpg');
+    background: url('../images/image_ (5).jpg');
     background-size: cover;
 }
 
@@ -242,6 +242,7 @@ a{
 
 .container-nouvelle .navbar ul li{
     margin-right: 23px;
+    border-bottom: 1px solid transparent;
 }
 
 .container-nouvelle .navbar ul li a{
@@ -255,12 +256,145 @@ a{
 }
 
 .slider-nouvelle .nouvelle-container{
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
 }
 
 .slider-nouvelle .nouvelle-container .nouvelle-overlay{
     width: 100%;
     height: 100%;
-    background:rgba(16,108,164,0.5);
+    padding: 50px 15px 0 15px;
+    color: #ffffff;
+}
+
+.slider-nouvelle .nouvelle-container .nouvelle-overlay .nouvelle-titre-1{
+    display: inline-block;
+    width: 100%;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.slider-nouvelle .nouvelle-container .nouvelle-overlay .nouvelle-titre-2{
+    display: inline-block;
+    width: 100%;
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 30px
+}
+
+.slider-nouvelle .nouvelle-container .nouvelle-overlay .nouvelle-text{
+    display: inline-block;
+    width: 80%;
+    font-size: 12px;
+}
+
+.slider-nouvelle .nouvelle-container .nouvelle-overlay-style-1{
+    background:rgba(164, 16, 61, 0.7);
+}
+
+.slider-nouvelle .nouvelle-container .nouvelle-overlay-style-2{
+    background:rgba(7, 146, 95,0.75);
+}
+
+.slider-nouvelle .nouvelle-container .nouvelle-overlay-style-3{
+    background:rgba(7 , 93, 146, 0.75);
+}
+
+.slider-nouvelle .nouvelle-container .nouvelle-overlay-style-4{
+    background:rgba(144 , 7, 146, 0.75);
+}
+
+.slider-nouvelle .nouvelle-container .nouvelle-overlay-style-5{
+    background:rgba(7 , 93, 146, 0.75);
+}
+
+.slider-nouvelle .nouvelle-img-1{
+    background: url('../images/image_ (4).jpg');
+    background-size: cover;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.slider-nouvelle .nouvelle-img-2{
+    background: url('../images/image_ (4).jpg');
+    background-size: cover;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.slider-nouvelle .nouvelle-img-3{
+    background: url('../images/image_ (4).jpg');
+    background-size: cover;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.slider-nouvelle .nouvelle-img-4{
+    background: url('../images/image_ (4).jpg');
+    background-size: cover;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.slider-nouvelle .nouvelle-img-5{
+    background: url('../images/image_ (4).jpg');
+    background-size: cover;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+/***************Section Grey Bar Search***************/
+
+.container-grey{
+    text-align: center;
+    background: #F1F1F1;
+    padding: 2.6em;
+}
+
+.titre-grey{
+    color: #106CA4;
+    font-size: 25px;
+    font-weight: 800;
+    margin-bottom: 50px;
+}
+
+.text-grey{
+    color: #707070;
+    font-size: 12px;
+    display: block;
+    padding: 0 15%;
+    margin-bottom: 1;
+}
+
+
+.btn-grey{
+    width: 18%;
+    background-color: #ffffff;
+    border: none;
+    padding: 3% 25%;
+    text-align: center;
+    font-size: 2.8em;
+    cursor: pointer;
+    margin: 18% auto;
+}
+
+.search-container{
+    margin-top: 3em;
+}
+
+.search-container input[type=text] {
+    width: 28%;
+    font-size: 0.8em;
+    margin-right: -2%;
+    border: none;
+    padding: 1% 1%;
+    color: #707070;
+}
+
+.search-container button {
+    font-size: 0.8em;
+    background: #106CA4;
+    padding: 1% 3%;
+    border: none;
+    color: #ffffff;
 }
